[package]
autobenches = false
categories = ["api-bindings", "date-and-time", "wasm"]
description = "Drop-in replacement for std::time for Wasm in browsers"
edition = "2021"
include = ["CHANGELOG.md", "LICENSE-*", "src/**/*"]
keywords = ["instant", "wasm", "web", "systemtime", "time"]
license = "MIT OR Apache-2.0"
name = "web-time"
repository = "https://github.com/daxpedda/web-time"
rust-version = "1.60"
version = "0.2.3"

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi"))))'.dependencies]
js-sys = "0.3.20"
wasm-bindgen = { version = "0.2.70", default-features = false }

[target.'cfg(not(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi")))))'.dev-dependencies]
pollster = { version = "0.3", features = ["macro"] }

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi"))))'.dev-dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = [
	"CssStyleDeclaration",
	"Document",
	"Element",
	"HtmlTableElement",
	"HtmlTableRowElement",
	"Performance",
	"Window",
] }

[target.'cfg(all(target_family = "wasm", not(any(target_os = "emscripten", target_os = "wasi")), target_feature = "atomics"))'.dev-dependencies]
futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false }
wasm-worker = { git = "https://github.com/daxpedda/wasm-worker" }
web-sys = { version = "0.3", features = ["WorkerGlobalScope"] }

[profile.bench]
codegen-units = 1
lto = true

[[example]]
name = "benchmark"
path = "benches/benchmark.rs"

[package.metadata.docs.rs]
targets = ["wasm32-unknown-unknown"]
