[package]
edition = "2021"
name = "atomic-test"
publish = false
version = "0.0.0"

[dev-dependencies]
futures-channel = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3", default-features = false }
js-sys = "0.3"
wasm-bindgen = { version = "0.2", default-features = false }
wasm-bindgen-futures = "0.4"
wasm-bindgen-test = "0.3"
wasm-worker = { git = "https://github.com/daxpedda/wasm-worker" }
web-sys = { version = "0.3", features = ["Window", "WorkerGlobalScope"] }
web-time = { path = "../" }
